make internal checksum validation and magic bytes opt-in
The internal checksumming validation and magic bytes are useful for
development and testing to ensure correctness. However, this is not
desirable for production environments which have more demanding
performance concerns.

To prevent possible performance penalty in production, we make this
extra level of internal validation opt-in.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rand = "0.8"
 tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"] }
 
 [features]
-default = ["validation"]
+default = []
 loom = ["dep:loom"]
 # Adds magic bytes and checksums to item headers for corruption detection (~3 bytes per item)
 validation = []
