--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 ahash = "0.8.12"
 clocksource = "0.8.1"
 crossbeam-deque = "0.8.6"
+libc = "0.2"
 loom = { version = "0.7", features = ["checkpoint"], optional = true }
 rand = "0.8"
 tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"] }
